--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    
+    <main id="main">
+    <h1 id="title">WE LOVE GUNS AND ROSES</h1>
+
+
+
+
+
+    </main>
     <!--
 
     Hello Camper!
